--- a/p1_doc.html
+++ b/p1_doc.html
@@ -49,6 +49,9 @@ code > span.er { color: #ff0000; font-weight: bold; }
 </div>
 <h1 id="meta">Meta</h1>
 <p>This documentation is stored on github, user <code>tomjridge</code>, repository <code>p1.wiki</code>. It is intended to be formatted to html using pandoc, but should be readable under the github wiki interface. Periodically the html version of this document is placed in the main <code>p1</code> repository.</p>
+<ul>
+<li><a href="http://tomjridge.github.io/p1/p1_doc.html" class="uri">http://tomjridge.github.io/p1/p1_doc.html</a> - doc formatted by pandoc</li>
+</ul>
 <h1 id="introduction">Introduction</h1>
 <p>P1 is a combinator parsing library for OCaml. The main feature is:</p>
 <ul>
@@ -58,6 +61,9 @@ code > span.er { color: #ff0000; font-weight: bold; }
 <p>The theory behind P1 is explained in the paper <span class="citation">(Ridge 2011)</span>. In the following sections, I will explain informally how P1 can be used to parse arbitrary context-free grammars.</p>
 <h1 id="other-sources-of-information-p1-ocamldoc-p1-source-code">Other sources of information: P1 ocamldoc, P1 source code</h1>
 <p>The build directory Makefile contains a target to build ocamldoc documentation for P1. This is a useful source of information. The interface is defined in the <code>p1_lib.mli</code> file, and we include excerpts from this file in the following sections.</p>
+<ul>
+<li><a href="http://tomjridge.github.io/p1/ocamldoc/" class="uri">http://tomjridge.github.io/p1/ocamldoc/</a> - ocamldoc</li>
+</ul>
 <p>In addition, the entire code for the core of P1 is under 40 lines. In conjunction with <span class="citation">(Ridge 2011)</span> it should be easy to understand the functioning of P1 in its entirety. The following sections describe the interface, for users who do not want to grapple with the details of <span class="citation">(Ridge 2011)</span>.</p>
 <h1 id="substrings">Substrings</h1>
 <p>The API is defined in the file <code>p1_lib.mli</code>.</p>
