--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <h1 id="p1-parsing-library">P1 parsing library</h1>
 <p>This code is based on: Tom Ridge, Simple, functional, sound and complete parsing for all context-free grammars. In Jean Pierre Jouannaud and Zhong Shao, editors, Certified Programs and Proofs - First International Conference, CPP 2011, Kenting, Taiwan, December 7-9, 2011. Proceedings, volume 7086 of Lecture Notes in Computer Science, pages 103--118. Springer, 2011</p>
 <p>The documentation source is currently on the github P1 wiki.</p>
+<p>This file, as html, can be viewed at <a href="http://tomjridge.github.io/p1" class="uri">http://tomjridge.github.io/p1</a></p>
 <p>The documentation can be viewed at <a href="http://tomjridge.github.io/p1/p1_doc.html" class="uri">http://tomjridge.github.io/p1/p1_doc.html</a></p>
 <p>The ocamldoc can be viewed at <a href="http://tomjridge.github.io/p1/ocamldoc" class="uri">http://tomjridge.github.io/p1/ocamldoc</a></p>
 <h2 id="todo">TODO</h2>
@@ -19,6 +20,7 @@
 <li>add parse_RE and parse_not_RE</li>
 <li>process pending.ml to include parser for grammar files</li>
 <li>documentation</li>
+<li>move doc from p1.wiki to p1 source?</li>
 </ul>
 </body>
 </html>
